# Copyright (C) 2009 Michal Cihar <michal@cihar.com>
#============================================================================

List of user-visible changes in Enca
More detailed log can be obtained from older changelogs or git log.

Legend: + new feature
        * change of behaviour (including disappearing of a feature)
        - bugfix

enca-1.13 2009-??-??

enca-1.12 2009-10-29
  - Fixes some minor memory leaks.
  - Fixes little problems in autoconf scripts.

enca-1.11 2009-09-25
  - Dropped scanf configure test which is not used at all.
  - Fixes some wrong format strings.

enca-1.10 2009-08-25
  + Enca is back alive or at least in maintenance mode.
  * Enca now lives in git repository, see <http://gitorious.org/enca>.
  - Add missing charset koi8u to belarussian language.
  - Fixed some typos in program and documentation.

enca-1.9 2005-12-18
  + support for HZ encoding
  * Big5 and GBK detection improved
  - enca.spec no longer installs docs to world-unreadable directory

enca-1.8 2005-11-24
  + Chinese (Big5 and GBK) support (thanks to Zuxy)
  * deb/ subdirectory is gone as there is finally an Enca package in Debian
    (thanks to Michal Cihar)
  - manual page clean-up (thanks to Michal Cihar)

enca-1.7 2005-02-27
  + new name type: preferred MIME name (option -m)
  - broken iconv detection on some system was fixed

enca-1.6 2004-09-01
  * English language names (--list=languages, enca_language_english_name())
    were changed to lowercase to match common locale aliases
  - Win32, i.e. MinGW and Cygwin, build problems were fixed

enca-1.5 2004-05-30
  - crash on impossible recovery after iconv failure in pipe was fixed
  - rpm building problems on Mandrake Linux were fixed

enca-1.4 2004-05-12
  - dependency of guessing API on locales (via ctype functions) was fixed
  - --help text generation failure on some systems was fixed

enca-1.3 2003-12-24
  + [libenca] it's possible to get analyser option values, not just set them